@@ -121,6 +121,7 @@ const unsigned char cob_a2e[256] = {
   0xf8, 0xf9, 0xfa, 0xfb, 0xfc, 0xfd, 0xfe, 0xff
 };
 
+/* Not needed at the moment - comment out
 const unsigned char cob_e2a[256] = {
   0x00, 0x01, 0x02, 0x03, 0x9c, 0x09, 0x86, 0x7f,
   0x97, 0x8d, 0x8e, 0x0b, 0x0c, 0x0d, 0x0e, 0x0f,
@@ -155,6 +156,7 @@ const unsigned char cob_e2a[256] = {
   0x30, 0x31, 0x32, 0x33, 0x34, 0x35, 0x36, 0x37,
   0x38, 0x39, 0xfa, 0xfb, 0xfc, 0xfd, 0xfe, 0xff
 };
+end of comment out */
 
 cob_module *cob_current_module = NULL;
 
