@@ -1,3 +1,11 @@
+2005-02-11  Roger While <simrw@sim-basis.de>
+
+	* Dummy entry
+
+2005-02-11  Roger While <simrw@sim-basis.de>
+
+	* run.src/extensions.at : Fix ARGUMENT check
+
 2005-02-08  Roger While <simrw@sim-basis.de>
 
 	* run.src/misc.at, run : Add EXTERNAL as Literal check
